--- a/pom.xml
+++ b/pom.xml
@@ -26,9 +26,8 @@
         </dependency>
         <dependency>
             <groupId>com.twitter</groupId>
-            <artifactId>hbc</artifactId>
-            <version>2.2.0</version>
-            <type>pom</type>
+            <artifactId>hbc-core</artifactId> <!-- or hbc-twitter4j -->
+            <version>2.2.0</version> <!-- or whatever the latest version is -->
         </dependency>
     </dependencies>
 
