--- a/elasticsearch_consumer_api/pom.xml
+++ b/elasticsearch_consumer_api/pom.xml
@@ -22,6 +22,11 @@
             <artifactId>elasticsearch-rest-high-level-client</artifactId>
             <version>7.11.2</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.9.0</version>
+        </dependency>
     </dependencies>
 
 </project>
